--- a/api/department/models/department.settings.json
+++ b/api/department/models/department.settings.json
@@ -31,8 +31,8 @@
       "type": "json"
     },
     "unit": {
-      "model": "unit",
-      "via": "departments"
+      "via": "departments",
+      "model": "unit"
     }
   }
 }
