--- a/api/unit/models/unit.settings.json
+++ b/api/unit/models/unit.settings.json
@@ -31,11 +31,20 @@
       "type": "json"
     },
     "departments": {
-      "collection": "department",
-      "via": "unit"
+      "via": "unit",
+      "collection": "department"
     },
     "type": {
       "type": "string"
+    },
+    "code": {
+      "type": "string"
+    },
+    "phone": {
+      "type": "string"
+    },
+    "email": {
+      "type": "email"
     }
   }
 }
