--- a/api/position/models/position.settings.json
+++ b/api/position/models/position.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "positions",
   "info": {
-    "name": "position"
+    "name": "position",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -24,6 +25,9 @@
     },
     "data": {
       "type": "json"
+    },
+    "type": {
+      "type": "string"
     }
   }
 }
