--- a/api/comrade/models/comrade.settings.json
+++ b/api/comrade/models/comrade.settings.json
@@ -68,6 +68,11 @@
     },
     "group": {
       "model": "position"
+    },
+    "user": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "comrade"
     }
   }
 }
