--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "strapi-plugin-email": "3.2.3",
     "strapi-plugin-upload": "3.2.3",
     "strapi-plugin-users-permissions": "3.2.3",
+    "strapi-provider-email-nodemailer": "^3.4.1",
     "strapi-utils": "3.2.3"
   },
   "author": {
