--- a/api/request/models/request.settings.json
+++ b/api/request/models/request.settings.json
@@ -45,6 +45,10 @@
     },
     "approver": {
       "model": "comrade"
+    },
+    "task": {
+      "via": "requests",
+      "model": "task"
     }
   }
 }
