--- a/api/task/models/task.settings.json
+++ b/api/task/models/task.settings.json
@@ -94,8 +94,8 @@
       "required": false
     },
     "requests": {
-      "collection": "request",
-      "via": "task"
+      "via": "task",
+      "collection": "request"
     },
     "createdBy": {
       "model": "comrade"
