--- a/api/request/models/request.settings.json
+++ b/api/request/models/request.settings.json
@@ -8,7 +8,7 @@
   "options": {
     "increments": true,
     "timestamps": true,
-    "draftAndPublish": true
+    "draftAndPublish": false
   },
   "attributes": {
     "title": {
@@ -47,8 +47,8 @@
       "model": "comrade"
     },
     "task": {
-      "via": "requests",
-      "model": "task"
+      "model": "task",
+      "via": "requests"
     }
   }
 }
