--- a/api/request/models/request.settings.json
+++ b/api/request/models/request.settings.json
@@ -47,8 +47,8 @@
       "model": "comrade"
     },
     "task": {
-      "model": "task",
-      "via": "requests"
+      "via": "requests",
+      "model": "task"
     }
   }
 }
