--- a/api/department/models/department.settings.json
+++ b/api/department/models/department.settings.json
@@ -8,7 +8,7 @@
   "options": {
     "increments": true,
     "timestamps": true,
-    "draftAndPublish": true
+    "draftAndPublish": false
   },
   "attributes": {
     "description": {
@@ -18,8 +18,8 @@
       "type": "string"
     },
     "comrades": {
-      "via": "department",
-      "collection": "comrade"
+      "collection": "comrade",
+      "via": "department"
     },
     "metadata": {
       "type": "json"
@@ -28,8 +28,8 @@
       "type": "json"
     },
     "unit": {
-      "model": "unit",
-      "via": "departments"
+      "via": "departments",
+      "model": "unit"
     },
     "phone": {
       "type": "string"
