--- a/api/task/models/task.settings.json
+++ b/api/task/models/task.settings.json
@@ -50,7 +50,7 @@
     "supervisorUnit": {
       "model": "unit"
     },
-    "executeDepartment": {
+    "executedDepartment": {
       "model": "department"
     },
     "supportedDepartment": {
