--- a/api/task/models/task.settings.json
+++ b/api/task/models/task.settings.json
@@ -117,6 +117,9 @@
     },
     "createdDepartment": {
       "model": "department"
+    },
+    "supportedDepartments": {
+      "collection": "department"
     }
   }
 }
