add document and createdUnit in task

--- a/api/task/models/task.settings.json
+++ b/api/task/models/task.settings.json
@@ -120,6 +120,12 @@
     },
     "supportedDepartments": {
       "collection": "department"
+    },
+    "document": {
+      "type": "string"
+    },
+    "createdMinistry": {
+      "type": "string"
     }
   }
 }
